feat(web): add Korean & Italian locales, update pricing CTA

--- a/packages/web/src/i18n/locales/de.json
+++ b/packages/web/src/i18n/locales/de.json
@@ -63,7 +63,8 @@
       "Numerische & Planungs-Add-ons",
       "Bis zu {{limit}} pro Aufnahme"
     ],
-    "downloadToGet": "Download für {{plan}}"
+    "downloadToGet": "Herunterladen & kostenlos testen",
+    "freeTrial": "3 Tage kostenlos testen inklusive"
   },
   "faq": {
     "heading": "Häufig gestellte Fragen",
