--- a/packages/web/src/i18n/locales/hi.json
+++ b/packages/web/src/i18n/locales/hi.json
@@ -63,7 +63,8 @@
       "न्यूमेरिक और प्लानिंग एड-ऑन",
       "प्रति रिकॉर्डिंग {{limit}} तक"
     ],
-    "downloadToGet": "{{plan}} पाने के लिए डाउनलोड करें"
+    "downloadToGet": "डाउनलोड करें और मुफ्त आज़माएँ",
+    "freeTrial": "3 दिन की मुफ्त ट्रायल शामिल"
   },
   "faq": {
     "heading": "अक्सर पूछे जाने वाले प्रश्न",
