--- a/packages/web/src/i18n/locales/ja.json
+++ b/packages/web/src/i18n/locales/ja.json
@@ -63,7 +63,8 @@
       "数値・プランニングアドオン",
       "録音あたり最大{{limit}}"
     ],
-    "downloadToGet": "{{plan}}を取得するためにダウンロード"
+    "downloadToGet": "ダウンロードして無料で試す",
+    "freeTrial": "3日間の無料トライアル付き"
   },
   "faq": {
     "heading": "よくある質問",
