--- a/packages/web/src/i18n/locales/ru.json
+++ b/packages/web/src/i18n/locales/ru.json
@@ -63,7 +63,8 @@
       "Числовые и Планировочные дополнения",
       "До {{limit}} на запись"
     ],
-    "downloadToGet": "Скачать для {{plan}}"
+    "downloadToGet": "Скачать и попробовать бесплатно",
+    "freeTrial": "3 дня бесплатного пробного периода"
   },
   "faq": {
     "heading": "Часто задаваемые вопросы",
